Refactored notificaiton classes into own package, began work on altering UI to accomodate functionality

--- a/src/t2fa_app/app/src/main/res/menu/menu_main.xml
+++ b/src/t2fa_app/app/src/main/res/menu/menu_main.xml
@@ -10,6 +10,6 @@
     <item
         android:id="@+id/action_set_notify"
         android:orderInCategory="1"
-        android:title="Set Notification"
+        android:title="@string/notify"
         app:showAsAction="never" />
 </menu>
