--- a/src/t2fa_app/app/src/main/res/layout/fragment_first.xml
+++ b/src/t2fa_app/app/src/main/res/layout/fragment_first.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/textview_first"
         android:layout_width="0dp"
-        android:layout_height="49dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:text="@string/intro_menu"
