--- a/src/t2fa_app/app/src/main/res/navigation/nav_graph.xml
+++ b/src/t2fa_app/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.turnerm.t2fa_app.FirstFragment"
+        android:name="com.turnerm.t2fa_app.MainFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.turnerm.t2fa_app.SecondFragment"
+        android:name="com.turnerm.t2fa_app.AuthFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
 
