--- a/src/t2fa_app/app/src/main/res/layout/fragment_first.xml
+++ b/src/t2fa_app/app/src/main/res/layout/fragment_first.xml
@@ -23,6 +23,7 @@
         android:id="@+id/button_first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClickAuthenticate"
         android:text="@string/authenticate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
