--- a/src/t2fa_app/app/src/main/res/menu/menu_main.xml
+++ b/src/t2fa_app/app/src/main/res/menu/menu_main.xml
@@ -12,4 +12,9 @@
         android:orderInCategory="1"
         android:title="@string/notify"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_save_file"
+        android:orderInCategory="2"
+        android:title="@string/action_save"
+        app:showAsAction="never" />
 </menu>
