--- a/src/t2fa_app/app/src/main/res/menu/menu_main.xml
+++ b/src/t2fa_app/app/src/main/res/menu/menu_main.xml
@@ -17,4 +17,9 @@
         android:orderInCategory="2"
         android:title="@string/action_save"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_change_object"
+        android:orderInCategory="3"
+        android:title="Change Object"
+        app:showAsAction="never" />
 </menu>
